--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
 .App {
   text-align: center;
 }
+
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  height: 100px;
+  width: 100px;
+  font-size: 2rem;
+  border: none;
+  margin: 1rem;
+  border-radius: 10px;
+  cursor: pointer;
+  outline: none;
+}
+
+.red-bg {
+  background-color: red;
+  cursor: not-allowed;
+}
+
+.white-bg {
+  background-color: white;
+}
